--- a/HVD_IMAGES/css/thumbnail.css
+++ b/HVD_IMAGES/css/thumbnail.css
@@ -1,7 +1,6 @@
 .imageLabel {
     width:185px;
     height:30px;
-    text-align: right;
 }
 
 .badge {
@@ -20,13 +19,19 @@
 }
 
 .imageBox {
-    width:auto;
     height:150px;
-    padding:0px !important;
+    display: table-cell;
+    padding:0px;
+    margin-left:auto;
+    margin-right: auto ;
+    z-index:0;
+    text-align: center;
+}
+
+.imageBox > img {
     margin-left:auto !important;
     margin-right: auto !important;
-    text-align: left;
-    z-index:0;
+    display: block !important;
 }
 
 .imageTitle {
@@ -114,12 +119,14 @@ a.thumbnail > img:focus {
 
 
 .nophoto {
-    width:150px;
-    height:150px;
+    width:148px;
+    height:148px;
     text-align: center;
     background:#efefef;
-    line-height:150px;
+    line-height:148px;
     z-index: 0;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .nophoto:hover {
